# chessbot

./: .gitignore  Cargo.toml  README.md  lichess.sh  log.txt  old  orig  stop.txt  train_data.flt  weird.txt
src/: bot.rs  lichess.rs  log.rs  main.rs  uci.rs
src/bot/: config.rs  eval.rs  mod.rs  search.rs  trans_table.rs
t/: Cargo.toml  server.py
t/src/: main.rs
variants/: fut  fut_2  fut_3  nmp  nmp_2  nmp_3  pvs
