workspace = { members = ["t"] }
[package]
name = "chessbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["stream"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.30"
bytes = "1.0"
chess = "3.2.0"
json = "0.12.4"
stderrlog = "0.6.0"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
