[package]
name = "chessbot"
version = "0.1.0"
edition = "2021"

[features]
default = ["uci"]
lichess = ["dep:reqwest", "dep:futures-util", "dep:bytes", "dep:json"]
uci = []

[dependencies]
reqwest = { version = "0.11.24", features = ["stream"], optional = true }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.30", optional = true }
bytes = { version = "1.0", optional = true }
json  = { version = "0.12.4", optional = true }
chess = "3.2.0"
rayon = "1.9.0"
murmur3 = "0.5.2"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# overflow-checks = true
